// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPC Project 0.11 1`] = `undefined`;

exports[`VPC Project 0.11 2`] = `
Array [
  Variable {
    "arguments": Object {
      "type": "string",
    },
    "blockNames": Array [
      "test",
    ],
    "blockType": "variable",
    "customArgumentToString": [Function],
    "innerBlocks": Array [],
    "name": "test",
  },
  Variable {
    "arguments": Object {
      "type": "string",
    },
    "blockNames": Array [
      "test2",
    ],
    "blockType": "variable",
    "customArgumentToString": [Function],
    "innerBlocks": Array [],
    "name": "test2",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Module {
    "arguments": Object {
      "source": "./test",
    },
    "blockNames": Array [
      "test",
    ],
    "blockType": "module",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
  },
  Resource {
    "arguments": Object {
      "cidr_block": "test",
      "tags": Map {
        "arguments": Object {
          "a": "a",
        },
      },
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
      "filter": Array [
        Object {
          "name": "tag:a",
          "values": Array [
            "a",
          ],
        },
      ],
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
      "filter": Array [
        Object {
          "name": "tag:a",
          "values": Array [
            "a",
          ],
        },
      ],
    },
    "blockNames": Array [
      "aws_vpc",
      "test2",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test2",
    "type": "aws_vpc",
  },
  Resource {
    "arguments": Object {
      "a": "a",
    },
    "blockNames": Array [
      "innerBlock",
      "innerBlock",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [
      Provisioner {
        "arguments": Object {
          "command": "echo hello",
        },
        "blockNames": Array [
          "local-exec",
        ],
        "blockType": "provisioner",
        "customArgumentToString": undefined,
        "innerBlocks": Array [],
        "type": "local-exec",
      },
      Provisioner {
        "arguments": Object {
          "command": "echo world",
        },
        "blockNames": Array [
          "local-exec",
        ],
        "blockType": "provisioner",
        "customArgumentToString": undefined,
        "innerBlocks": Array [],
        "type": "local-exec",
      },
    ],
    "name": "innerBlock",
    "type": "innerBlock",
  },
  Locals {
    "arguments": Object {
      "a": "a",
      "b": 123,
      "c": Attribute {
        "argument": "aws_vpc.test.x",
        "asIs": false,
      },
    },
    "blockNames": Array [],
    "blockType": "lcoals",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
  },
  Resource {
    "arguments": Object {
      "a": Argument {
        "argument": "local.a",
        "asIs": false,
      },
    },
    "blockNames": Array [
      "locals",
      "locals",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "locals",
    "type": "locals",
  },
  Provisioner {
    "arguments": Object {
      "a": "a",
      "b": 123,
      "c": Attribute {
        "argument": "aws_vpc.test.x",
        "asIs": false,
      },
    },
    "blockNames": Array [
      "provisioner",
    ],
    "blockType": "provisioner",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "type": "provisioner",
  },
  Resource {
    "arguments": Object {
      "tfg2": "tfg2",
    },
    "blockNames": Array [
      "tfg2",
      "tfg2",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "tfg2",
    "type": "tfg2",
  },
]
`;

exports[`VPC Project 0.11 3`] = `
Object {
  "test2": "test",
}
`;

exports[`VPC Project 0.11 4`] = `
Object {
  "tf": "variable \\"test\\"{
type = \\"string\\"
}

variable \\"test2\\"{
type = \\"string\\"
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

lcoals{
a = \\"a\\"
b = 123
c = \\"\${aws_vpc.test.x}\\"
}

resource \\"locals\\" \\"locals\\"{
a = \\"\${local.a}\\"
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = \\"\${aws_vpc.test.x}\\"
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

",
  "tfvars": "test2 = \\"test\\"

",
}
`;

exports[`VPC Project 0.11 5`] = `
"variable \\"test\\"{
type = \\"string\\"
}

variable \\"test2\\"{
type = \\"string\\"
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

lcoals{
a = \\"a\\"
b = 123
c = \\"\${aws_vpc.test.x}\\"
}

resource \\"locals\\" \\"locals\\"{
a = \\"\${local.a}\\"
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = \\"\${aws_vpc.test.x}\\"
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

"
`;

exports[`VPC Project 0.11 6`] = `
"test2 = \\"test\\"

"
`;

exports[`VPC Project 0.12 1`] = `undefined`;

exports[`VPC Project 0.12 2`] = `
Array [
  Variable {
    "arguments": Object {
      "type": "string",
    },
    "blockNames": Array [
      "test",
    ],
    "blockType": "variable",
    "customArgumentToString": [Function],
    "innerBlocks": Array [],
    "name": "test",
  },
  Variable {
    "arguments": Object {
      "type": "string",
    },
    "blockNames": Array [
      "test2",
    ],
    "blockType": "variable",
    "customArgumentToString": [Function],
    "innerBlocks": Array [],
    "name": "test2",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Module {
    "arguments": Object {
      "source": "./test",
    },
    "blockNames": Array [
      "test",
    ],
    "blockType": "module",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
  },
  Resource {
    "arguments": Object {
      "cidr_block": "test",
      "tags": Map {
        "arguments": Object {
          "a": "a",
        },
      },
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
      "filter": Array [
        Object {
          "name": "tag:a",
          "values": Array [
            "a",
          ],
        },
      ],
    },
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "arguments": Object {
      "cidr_block": "test",
      "filter": Array [
        Object {
          "name": "tag:a",
          "values": Array [
            "a",
          ],
        },
      ],
    },
    "blockNames": Array [
      "aws_vpc",
      "test2",
    ],
    "blockType": "data",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "test2",
    "type": "aws_vpc",
  },
  Resource {
    "arguments": Object {
      "a": "a",
    },
    "blockNames": Array [
      "innerBlock",
      "innerBlock",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [
      Provisioner {
        "arguments": Object {
          "command": "echo hello",
        },
        "blockNames": Array [
          "local-exec",
        ],
        "blockType": "provisioner",
        "customArgumentToString": undefined,
        "innerBlocks": Array [],
        "type": "local-exec",
      },
      Provisioner {
        "arguments": Object {
          "command": "echo world",
        },
        "blockNames": Array [
          "local-exec",
        ],
        "blockType": "provisioner",
        "customArgumentToString": undefined,
        "innerBlocks": Array [],
        "type": "local-exec",
      },
    ],
    "name": "innerBlock",
    "type": "innerBlock",
  },
  Locals {
    "arguments": Object {
      "a": "a",
      "b": 123,
      "c": Attribute {
        "argument": "aws_vpc.test.x",
        "asIs": false,
      },
    },
    "blockNames": Array [],
    "blockType": "lcoals",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
  },
  Resource {
    "arguments": Object {
      "a": Argument {
        "argument": "local.a",
        "asIs": false,
      },
    },
    "blockNames": Array [
      "locals",
      "locals",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "locals",
    "type": "locals",
  },
  Provisioner {
    "arguments": Object {
      "a": "a",
      "b": 123,
      "c": Attribute {
        "argument": "aws_vpc.test.x",
        "asIs": false,
      },
    },
    "blockNames": Array [
      "provisioner",
    ],
    "blockType": "provisioner",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "type": "provisioner",
  },
  Resource {
    "arguments": Object {
      "tfg2": "tfg2",
    },
    "blockNames": Array [
      "tfg2",
      "tfg2",
    ],
    "blockType": "resource",
    "customArgumentToString": undefined,
    "innerBlocks": Array [],
    "name": "tfg2",
    "type": "tfg2",
  },
]
`;

exports[`VPC Project 0.12 3`] = `
Object {
  "test2": "test",
}
`;

exports[`VPC Project 0.12 4`] = `
Object {
  "tf": "variable \\"test\\"{
type = string
}

variable \\"test2\\"{
type = string
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

lcoals{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"locals\\" \\"locals\\"{
a = local.a
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

",
  "tfvars": "test2 = \\"test\\"

",
}
`;

exports[`VPC Project 0.12 5`] = `
"variable \\"test\\"{
type = string
}

variable \\"test2\\"{
type = string
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

lcoals{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"locals\\" \\"locals\\"{
a = local.a
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

"
`;

exports[`VPC Project 0.12 6`] = `
"test2 = \\"test\\"

"
`;
